bugfix action: silently fail if no files to delete

--- a/.github/workflows/build-html.yml
+++ b/.github/workflows/build-html.yml
@@ -18,9 +18,8 @@ jobs:
 
       - name: Clean pre-built views
         run: |
-          pwd
-          ls -al
-          rm ./views/*
+          ls -la
+          rm -f views/*
 
       - name: Build Views
         run: docker-compose run pandoc-converter
