--- a/.github/workflows/build-html.yml
+++ b/.github/workflows/build-html.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Push Changes
         run: |
-          git add views
+          git add .
           git config --local user.email "infinage@users.noreply.github.com"
           git config --local user.name "GitHub Action"
           git commit -m "CI: Auto Build Views"
