Striver A2Z: DP - 3, fix github actions for view creation
- Striver DP Study
- Fix GA Issues: Create a venv before installing packages, latest version of
pandoc/minimal throws an error when trying to pip install as root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     command: sh -c "
         apk upgrade 
         && apk add git python3-dev py-pip gcc linux-headers musl-dev linux-headers
-        && pip install papermill ipykernel numpy pandas tqdm
         && cd /data 
+        && python -m venv .venv
+        && source .venv/bin/activate
+        && pip install papermill ipykernel numpy pandas tqdm
         && python3 build.py
       "
