CP Practice - 2nd Aug 2024, Fix GH Action
GH Action error: Docker compose not found

--- a/.github/workflows/build-html.yml
+++ b/.github/workflows/build-html.yml
@@ -22,7 +22,7 @@ jobs:
         run: ls -la
 
       - name: Build Views
-        run: docker-compose run pandoc-converter
+        run: docker compose run pandoc-converter
 
       - name: Push Changes
         run: |
